[gd_scene load_steps=5 format=3 uid="uid://ch3ychkb8t0gl"]

[ext_resource type="PackedScene" uid="uid://i1m2mfdu3lsi" path="res://characters/player.tscn" id="1_rux3k"]
[ext_resource type="Script" path="res://main.gd" id="1_x5sgc"]
[ext_resource type="PackedScene" uid="uid://n1y6vfnoqvuc" path="res://hud.tscn" id="3_woaa8"]
[ext_resource type="PackedScene" uid="uid://bibcj5qqr4ow2" path="res://rooms/room_1.tscn" id="4_lf8y1"]

[node name="main" type="Node2D"]
process_mode = 3
script = ExtResource("1_x5sgc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_woaa8")]
z_index = 10

[node name="Player" parent="." instance=ExtResource("1_rux3k")]
process_mode = 1
z_index = 20
position = Vector2(900, 481)

[node name="PlayerCamera" type="Camera2D" parent="Player"]
position = Vector2(76, 56)
zoom = Vector2(1.1, 1.1)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true
position_smoothing_speed = 2.0
editor_draw_limits = true

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(900, 483)

[node name="MobTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.7

[node name="Rooms" type="Node2D" parent="."]

[node name="room1" parent="Rooms" instance=ExtResource("4_lf8y1")]

[connection signal="change_position" from="Player" to="." method="_on_player_change_position"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
